--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "datasets>=4.4.1",
     "matplotlib>=3.10.8",
     "nltk>=3.9.2",
     "numpy>=2.3.5",
