Remove python version pin for Streamlit Cloud

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-pandas
-numpy
-scikit-learn
-matplotlib
-seaborn
-nltk
-streamlit
+streamlit==1.52.1
+scikit-learn==1.8.0
+pandas==2.3.3
+numpy==2.3.5
+joblib
